--- a/views/index.html
+++ b/views/index.html
@@ -4,54 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vehículos</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"/>
   </head>
   <body>
     <div class="container bg-light pb-3">
       <h2 class="text-center my-5 pt-3">Ejercicio Vehículos</h2>
       <form action="" class="form-row" id="formCar">
         <div class="form-group col-4">
-          <label for="plate">Plate</label>
+          <label for="plate" class="text-uppercase font-weight-bold">Plate</label>
           <input type="text" name="plate" id="plate" class="form-control" />
         </div>
         <div class="form-group col-4">
-          <label for="brand">Brand</label>
+          <label for="brand" class="text-uppercase font-weight-bold">Brand</label>
           <input type="text" name="brand" id="brand" class="form-control" />
         </div>
         <div class="form-group col-4">
-          <label for="color">Color</label>
+          <label for="color" class="text-uppercase font-weight-bold">Color</label>
           <input type="text" name="color" id="color" class="form-control" />
         </div>
-        <button
-          type="button"
-          onclick="return createCar()"
-          class="btn btn-secondary btn-block mx-1"
-        >
+        <button type="button" onclick="return createCar()" class="btn btn-secondary btn-block mx-1">
           Create car
         </button>
       </form>
-      <div
-        id="infoCar"
-        class="row bg-white mt-4 mx-1 d-none d-flex justify-content-around"
-      ></div>
+      <div id="infoCar" class="row bg-white mt-4 mx-1 d-none d-flex justify-content-around">
+      </div>
+      <form action="" class="form-row d-none mt-5" id="formWheels">
+        <div class="form-group col-6">
+          <p class="font-weight-bold text-center text-uppercase">Wheel 1</p>
+          <input type="text" name="wheelBrand1" id="wheelBrand1" class="form-control my-2" placeholder="Brand">
+          <input type="text" name="wheelDiam1" id="wheelDiam1" class="form-control my-2" placeholder="Diameter">
+        </div>
+        <div class="form-group col-6">
+          <p class="font-weight-bold text-center text-uppercase">Wheel 2</p>
+          <input type="text" name="wheelBrand2" id="wheelBrand2" class="form-control my-2" placeholder="Brand">
+          <input type="text" name="wheelDiam2" id="wheelDiam2" class="form-control my-2" placeholder="Diameter">
+        </div>
+        <div class="form-group col-6">
+          <p class="font-weight-bold text-center text-uppercase">Wheel 3</p>
+          <input type="text" name="wheelBrand3" id="wheelBrand3" class="form-control my-2" placeholder="Brand">
+          <input type="text" name="wheelDiam3" id="wheelDiam3" class="form-control my-2" placeholder="Diameter">
+        </div>
+        <div class="form-group col-6">
+          <p class="font-weight-bold text-center text-uppercase">Wheel 4</p>
+          <input type="text" name="wheelBrand4" id="wheelBrand4" class="form-control my-2" placeholder="Brand">
+          <input type="text" name="wheelDiam4" id="wheelDiam4" class="form-control my-2" placeholder="Diameter">
+        </div>
+        <button type="button" onclick="return addWheels()" class="btn btn-secondary btn-block mx-1">
+          Add wheels
+        </button>
+      </form>
+      <div id="infoWheels" class="row bg-white mt-4 mx-1 d-none">
+      </div>
     </div>
     <script src="../models/car.js"></script>
     <script src="../models/wheel.js"></script>
     <script src="../controllers/controller.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Bootstrap scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
 </html>
