fixed the checking wheels and adding wheels

--- a/views/index.html
+++ b/views/index.html
@@ -33,25 +33,33 @@
         <div class="form-group col-6">
           <p class="font-weight-bold text-center text-uppercase">Wheel 1</p>
           <input type="text" name="wheelBrand1" id="wheelBrand1" class="form-control my-2" placeholder="Brand">
+          <div class="invalid-feedback" id="errorwheelBrand1"></div>
           <input type="text" name="wheelDiam1" id="wheelDiam1" class="form-control my-2" placeholder="Diameter">
+          <div class="invalid-feedback" id="errorwheelDiam1"></div>
         </div>
         <div class="form-group col-6">
           <p class="font-weight-bold text-center text-uppercase">Wheel 2</p>
           <input type="text" name="wheelBrand2" id="wheelBrand2" class="form-control my-2" placeholder="Brand">
+          <div class="invalid-feedback" id="errorwheelBrand2"></div>
           <input type="text" name="wheelDiam2" id="wheelDiam2" class="form-control my-2" placeholder="Diameter">
+          <div class="invalid-feedback" id="errorwheelDiam2"></div>
         </div>
         <div class="form-group col-6">
           <p class="font-weight-bold text-center text-uppercase">Wheel 3</p>
           <input type="text" name="wheelBrand3" id="wheelBrand3" class="form-control my-2" placeholder="Brand">
+          <div class="invalid-feedback" id="errorwheelBrand3"></div>
           <input type="text" name="wheelDiam3" id="wheelDiam3" class="form-control my-2" placeholder="Diameter">
+          <div class="invalid-feedback" id="errorwheelDiam3"></div>
         </div>
         <div class="form-group col-6">
           <p class="font-weight-bold text-center text-uppercase">Wheel 4</p>
           <input type="text" name="wheelBrand4" id="wheelBrand4" class="form-control my-2" placeholder="Brand">
+          <div class="invalid-feedback" id="errorwheelBrand4"></div>
           <input type="text" name="wheelDiam4" id="wheelDiam4" class="form-control my-2" placeholder="Diameter">
+          <div class="invalid-feedback" id="errorwheelDiam4"></div>
         </div>
         <button type="button" onclick="return addWheels()" class="btn btn-secondary btn-block mx-1">
-          Add wheels
+          Check wheels
         </button>
       </form>
       <div id="infoWheels" class="row bg-white mt-4 mx-1 d-none">
